# kobe

./: 3.0  README.md  modelo_final.pkl  pyproject.toml  requirements.txt
.mlruns/0/: meta.yaml
.virtual_documents/notebooks/: Model.ipynb  preparacao_dados.ipynb  transformation.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: base_test.parquet  base_train.parquet  data_filtered.parquet  data_processed_prod.parquet
data/06_models/: modelo_final.pickle
data/08_reporting/: resultado_pipeline.parquet
docs/source/: conf.py  index.rst
mlflow_runs/0/: meta.yaml
mlflow_runs/135378862602316102/: meta.yaml
mlflow_runs/135378862602316102/a798d7f32307497d8ed97b461a44ffed/: meta.yaml
mlflow_runs/135378862602316102/a798d7f32307497d8ed97b461a44ffed/tags/: mlflow.source.name  project_path  runner  session_id
mlflow_runs/135378862602316102/fcd54b1e5a7c42d9a3ae456d1152345f/: meta.yaml
mlflow_runs/135378862602316102/fcd54b1e5a7c42d9a3ae456d1152345f/tags/: runner  session_id
notebooks/: 3.0  aplicacao.ipynb  create_model.ipynb  mlflow_serv.ipynb  preparacao_dados.ipynb  view_data.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/4c6d4f2f82484357b8557be61f453f3a/: meta.yaml
notebooks/mlruns/0/5c9fab6f6cb84cb683cb7301106d75e6/: meta.yaml
notebooks/mlruns/0/5f5a48ae2fb541b8a7fe7277091d7a73/: meta.yaml
src/trabalho/: __init__.py  __main__.py  settings.py
src/trabalho/dashboard/: app.py
(+36 files in other folders)
